<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
                             http://maven.apache.org/xsd/maven-4.0.0.xsd">

  <modelVersion>4.0.0</modelVersion>

  <!-- Projekt-Koordinaten aus der Ausschreibung -->
  <groupId>de.litera</groupId>
  <artifactId>buecherkatalog</artifactId>
  <version>1.0.0</version>
  <packaging>jar</packaging>

  <name>Bücherkatalog-Anwendung</name>
  <description>Entwicklung einer Bücherkatalog-Anwendung für Firma Litera</description>
  <url>http://www.litera.de</url>

  <properties>
    <!-- Java-Version festlegen -->
    <maven.compiler.source>11</maven.compiler.source>
    <maven.compiler.target>11</maven.compiler.target>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <jackson.version>2.15.2</jackson.version>
  </properties>

  <developers>
    <developer>
      <name>Ranim Khallouf</name>
    </developer>
    <developer>
      <name>Rama Alshaer</name>
    </developer>
    <developer>
      <name>Marija Ratnikova</name>
    </developer>
    <developer>
      <name>Lena Heberlein</name>
    </developer>
  </developers>

  <dependencies>
    <!-- Jackson für JSON-Serialisierung/-Deserialisierung -->
    <dependency>
      <groupId>com.fasterxml.jackson.core</groupId>
      <artifactId>jackson-databind</artifactId>
      <version>${jackson.version}</version>
    </dependency>

    <!-- JUnit für Unit-Tests -->
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter</artifactId>
      <version>5.9.2</version>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <build>
    <!-- Quellcode befindet sich direkt im Projektverzeichnis -->
    <sourceDirectory>${project.basedir}</sourceDirectory>

    <plugins>
      <!-- Compiler-Plugin -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.10.1</version>
        <configuration>
          <source>${maven.compiler.source}</source>
          <target>${maven.compiler.target}</target>
        </configuration>
      </plugin>

      <!-- Surefire für Tests -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>3.0.0-M7</version>
      </plugin>
    </plugins>
  </build>

</project>
